--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "bumbummen99/shoppingcart": "^2.8",
         "darryldecode/cart": "^4.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0"
