--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "darryldecode/cart": "^4.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0"
